<resources>
    <string name="app_name">Sweet</string>
    <string name="enter_house_id">Login</string>
    <string name="temperature">temperature</string>
    <string name="light">light</string>
    <string name="mailbox">mailbox</string>
    <string name="doorbell">Doorbell</string>
    <string name="houseid">house id</string>
    <string name="currenthouse">Current House: </string>
    <string name="currentLightState">Current Light State: </string>
    <string name="currentThreshold">Current Threshold: </string>
    <string name="setThreshold">Set Threshold</string>
    <string name="thresholdRange">Update Threshold (0 ℃-40 ℃): </string>
    <string name="manualControlLight">Manual Control Light</string>
    <string name="sweetHome">Sweet Home</string>
    <string name="visitorText">Number of your visitors is: </string>
    <string name="visitorCount"></string>
    <string name="visitorInfo"></string>
    <string name="doorbellTitle">Visitors List</string>
    <string name="visitorConfirmButton">confirm</string>
    <string name="history_bt">History</string>
    <string name="historyTitle">Visitor History</string>
    <string name="historyInfo"></string>
</resources>
